tests/snapshots/integration_tests__sequence_diagram_note.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           │     
      │──────────▶│       Hello
      │           │ ┌───────┐
      │           │ │ Think │
      │           │ └───────┘
      │           │     
      │◀──────────│       Hi
      │           │
