tests/snapshots/integration_tests__sequence_diagram_participants.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           │     
      │──────────▶│       Message
      │           │
