tests/snapshots/integration_tests__sequence_diagram_simple.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   ┌─────┐      ┌───┐   
   │Alice│      │Bob│   
   └─────┘      └───┘   
      │           │     
      │──────────▶│       Hello Bob!
      │           │     
      │◀··········│       Hi Alice!
      │           │
