tests/snapshots/integration_tests__simple_tb_flowchart.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌─────┐
│Start│
└─────┘
   │
   │
   │
   ▼
 ┌───┐
 │End│
 └───┘
