tests/snapshots/integration_tests__solid_arrow.snap
---
source: tests/integration_tests.rs
expression: r1.output
---
┌───┐        ┌───┐
│ A │───────▶│ B │
└───┘        └───┘
