tests/snapshots/integration_tests__solid_line.snap
---
source: tests/integration_tests.rs
expression: r2.output
---
┌───┐        ┌───┐
│ A │────────│ B │
└───┘        └───┘
