tests/snapshots/integration_tests__state_diagram_composite.snap
---
source: tests/integration_tests.rs
expression: result.output
---
   (╭─╮)        (╭─╮)
   ( ● )        ( ● )
   (╰─╯)        (╰─╯)
     │            │
     │            │
    ┌┘            └─┐
    ▼               ▼
╭──────╮        ╭───────╮
│Active│        │Running│
╰──────╯        ╰───────╯
    │               │
    │               │
    └───────────────┐
      ▼             ▼
  ╭──────╮        (╭─╮)
  │Paused│        ( ◉ )
  ╰──────╯        (╰─╯)
      └─────────────┐
