tests/snapshots/integration_tests__state_diagram_descriptions.snap
---
source: tests/integration_tests.rs
expression: result.output
---
╭─────────────────╮
│Waiting for input│
╰─────────────────╯
         │
         │
         │resett
         │
 ╭───────────────╮
 │Processing data│
 ╰───────────────╯
