tests/snapshots/integration_tests__state_diagram_simple.snap
---
source: tests/integration_tests.rs
expression: result.output
---
  (╭─╮)
  ( ● )
  (╰─╯)
    │
    │
    │
    ▼
 ╭────╮
 │Idle│
 ╰────╯
    │
    │
    │
    ▼
╭───────╮
│Running│
╰───────╯
    │
    │
    │
    ▼
  (╭─╮)
  ( ◉ )
  (╰─╯)
