tests/snapshots/integration_tests__state_diagram_v1.snap
---
source: tests/integration_tests.rs
expression: result.output
---
╭───╮
│s1 │
╰───╯
  │
  │
  │
  ▼
╭───╮
│s2 │
╰───╯
  │
  │
  │
  ▼
╭───╮
│s3 │
╰───╯
