tests/snapshots/integration_tests__subgraph_parsing.snap
---
source: tests/integration_tests.rs
expression: result.output
---
╔══════════════╗
║API Server│   ║
║──────────┘   ║
║     │        ║
║     │        ║
║     │        ║
║     ▼        ║
║╭────────╮    ║
║├────────┤    ║
║│Database│    ║
║├────────┤    ║
║╰────────╯    ║
║              ║
║              ║
║              ║
║              ║
╚══════════════╝
